# voice-quiz-app

./: nixpacks.toml  railway.toml
voice-quiz-back/: .env.example  .gitignore  Dockerfile  README.md  app.py  check_config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.sh  test1.py  test2.ipynb  test_openrouter.py  vercel.json
voice-quiz-back/app/: __init__.py
voice-quiz-back/app/api/: ai_api_client.py
voice-quiz-back/app/routes/: routes.py
voice-quiz-back/app/schemas/: question_schemas.py
voice-quiz-back/app/services/: fireworks_service.py  structured_quiz_service.py  together_service.py  usellm_service.py
voice-quiz-back/app/templates/: system_templates.py
voice-quiz-back/app/utils/: helpers.py
voice-quiz-front/: index.html  package-lock.json  package.json  tailwind.config.js
voice-quiz-front/public/: styles.css
voice-quiz-front/src/: App.tsx  input.css  main.tsx  output.css
voice-quiz-front/src/app/: store.ts  store.tsx
voice-quiz-front/src/class/: class-record.class.tsx  course.class.ts  course.class.tsx  fragments.ts  questions.class.ts  quiz.class.ts  rol.class.ts  sessions.ts  user-rol.class.ts  user.class.ts
voice-quiz-front/src/components/audioRecorder/: audioRecorder.tsx  audioRecorderNav.tsx  audioUploader.tsx
voice-quiz-front/src/components/ui/: useDevice.tsx
voice-quiz-front/src/config/: config.ts
voice-quiz-front/src/context/: auth-context.tsx
voice-quiz-front/src/features/: class-record.ts  course.features.ts  fragments.features.ts  questions.features.ts  userAuth.features.ts
voice-quiz-front/src/features/db-features/: courses.features.ts  questions.features.ts  quizzes.features.ts  results.features.ts  roles.db.features.ts  sessions.features.ts  users-roles.db.freatures.ts  users.db.features.ts
voice-quiz-front/src/hooks/: hooks.tsx  useAuth.tsx  useDevice.tsx  useLLmHook.tsx  useRecognition.tsx  useToggle.tsx  useTypeWriter.tsx
voice-quiz-front/src/interface/: index.ts  types.ts
voice-quiz-front/src/interface/questions-response/: multiple-answers.ts
voice-quiz-front/src/libs/: animate.ts
voice-quiz-front/src/pages/audio/: audio.tsx
voice-quiz-front/src/routes/: routes.tsx
(+94 files in other folders)
