[project]
name = "voice-quiz-back"
version = "0.1.0"
description = "Voice Quiz Backend API"
requires-python = ">=3.11"
dependencies = [
    "Flask",
    "flask-cors",
    "openai",
    "numpy",
    "usellm",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
