[project]
name = "voice-quiz-back"
version = "0.1.0"
description = "Voice Quiz Backend API"
requires-python = ">=3.11"
dependencies = [
    "Flask",
    "flask-cors",
    "openai",
    "numpy",
    "usellm",
    "python-dotenv",
]

[project.scripts]
dev = "run:main"
start = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
